codex-rs/rmcp-client/src/snapshots/codex_rmcp_client__perform_oauth_login__callback_page__tests__pending_callback.snap
---
source: rmcp-client/src/oauth_callback_page_tests.rs
expression: html(&response)
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Completing authentication · Codex</title>
<meta http-equiv="refresh" content="1;url=?codex_oauth_result=1">
<style>[shared callback stylesheet]</style>
</head>
<body class="pending">
<main class="shell">
<header class="brand"><span class="brand-name">Codex</span><span class="brand-caption">ACCOUNT CONNECTION</span></header>
<section class="card" aria-labelledby="status-title">
<div class="artwork"><span class="codex-mark" aria-hidden="true">&gt;_</span><span class="art-caption">A secure connection.<br>A simpler day.</span></div>
<div class="content">
<span class="status"><span class="status-dot" aria-hidden="true"></span>CONNECTING</span>
<h1 id="status-title">Completing authentication</h1>
<p class="message">Please wait while Codex verifies and saves your credentials.</p>
<div class="next-step"><span class="step-mark" aria-hidden="true">…</span><p>This page will update automatically.</p></div>
</div>
</section>
<footer><span class="footer-dot" aria-hidden="true"></span>Private by design<span class="footer-divider" aria-hidden="true">·</span>Secure sign-in with Codex</footer>
</main>
</body>
</html>
