codex-rs/rmcp-client/src/snapshots/codex_rmcp_client__perform_oauth_login__callback_page__tests__syntropic_status_pages.snap
---
source: rmcp-client/src/oauth_callback_page_tests.rs
expression: "rendered.join(\"\\n\")"
---
--- pending ---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Completing authentication · Syntropic</title>
<meta http-equiv="refresh" content="1;url=?codex_oauth_result=1">
<style>[shared callback stylesheet]</style>
</head>
<body class="pending">
<main class="shell">
<header class="brand"><span class="brand-name">Syntropic</span><span class="brand-caption">ACCOUNT CONNECTION</span></header>
<section class="card" aria-labelledby="status-title">
<div class="artwork"><img class="logo" src="[embedded Syntropic logo]" width="1024" height="1024" alt="Syntropic logo"><span class="art-caption">A secure connection.<br>A simpler day.</span></div>
<div class="content">
<span class="status"><span class="status-dot" aria-hidden="true"></span>CONNECTING</span>
<h1 id="status-title">Completing authentication</h1>
<p class="message">Please wait while Codex verifies and saves your credentials.</p>
<div class="next-step"><span class="step-mark" aria-hidden="true">…</span><p>This page will update automatically.</p></div>
</div>
</section>
<footer><span class="footer-dot" aria-hidden="true"></span>Private by design<span class="footer-divider" aria-hidden="true">·</span>Secure sign-in with Codex</footer>
</main>
</body>
</html>

--- success ---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Authentication complete · Syntropic</title>

<style>[shared callback stylesheet]</style>
</head>
<body class="success">
<main class="shell">
<header class="brand"><span class="brand-name">Syntropic</span><span class="brand-caption">ACCOUNT CONNECTION</span></header>
<section class="card" aria-labelledby="status-title">
<div class="artwork"><img class="logo" src="[embedded Syntropic logo]" width="1024" height="1024" alt="Syntropic logo"><span class="art-caption">A secure connection.<br>A simpler day.</span></div>
<div class="content">
<span class="status"><span class="status-dot" aria-hidden="true"></span>CONNECTED</span>
<h1 id="status-title">Authentication complete</h1>
<p class="message">Your credentials have been saved. You may close this window.</p>
<div class="next-step"><span class="step-mark" aria-hidden="true">✓</span><p>Return to Codex whenever you are ready.</p></div>
</div>
</section>
<footer><span class="footer-dot" aria-hidden="true"></span>Private by design<span class="footer-divider" aria-hidden="true">·</span>Secure sign-in with Codex</footer>
</main>
</body>
</html>

--- failure ---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Authentication failed · Syntropic</title>

<style>[shared callback stylesheet]</style>
</head>
<body class="failure">
<main class="shell">
<header class="brand"><span class="brand-name">Syntropic</span><span class="brand-caption">ACCOUNT CONNECTION</span></header>
<section class="card" aria-labelledby="status-title">
<div class="artwork"><img class="logo" src="[embedded Syntropic logo]" width="1024" height="1024" alt="Syntropic logo"><span class="art-caption">A secure connection.<br>A simpler day.</span></div>
<div class="content">
<span class="status"><span class="status-dot" aria-hidden="true"></span>ACTION NEEDED</span>
<h1 id="status-title">Authentication failed</h1>
<p class="message">Codex could not complete authentication. Return to Codex and try again.</p>
<div class="next-step"><span class="step-mark" aria-hidden="true">↗</span><p>Start a new sign-in from Codex.</p></div>
</div>
</section>
<footer><span class="footer-dot" aria-hidden="true"></span>Private by design<span class="footer-divider" aria-hidden="true">·</span>Secure sign-in with Codex</footer>
</main>
</body>
</html>

--- invalid ---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Invalid OAuth callback · Syntropic</title>

<style>[shared callback stylesheet]</style>
</head>
<body class="invalid">
<main class="shell">
<header class="brand"><span class="brand-name">Syntropic</span><span class="brand-caption">ACCOUNT CONNECTION</span></header>
<section class="card" aria-labelledby="status-title">
<div class="artwork"><img class="logo" src="[embedded Syntropic logo]" width="1024" height="1024" alt="Syntropic logo"><span class="art-caption">A secure connection.<br>A simpler day.</span></div>
<div class="content">
<span class="status"><span class="status-dot" aria-hidden="true"></span>CHECK REQUEST</span>
<h1 id="status-title">Invalid OAuth callback</h1>
<p class="message">This request does not match the callback. Return to Codex to continue signing in.</p>
<div class="next-step"><span class="step-mark" aria-hidden="true">↗</span><p>Use the sign-in link provided by Codex.</p></div>
</div>
</section>
<footer><span class="footer-dot" aria-hidden="true"></span>Private by design<span class="footer-divider" aria-hidden="true">·</span>Secure sign-in with Codex</footer>
</main>
</body>
</html>
